?? Jan 2012, PHP 5.4.0 RC6

- Core:
  . Restoring $_SERVER['REQUEST_TIME'] as a long and introducing
    $_SERVER['REQUEST_TIME_FLOAT'] to include microsecond precision. (Patrick)

- Pdo Firebird:
  . Fixed bug #47415 (segfaults when passing lowercased column name to 
    bindColumn). (Mariuz)
  . Fixed bug #53280 (segfaults if query column count less than param count). 
    (Mariuz)

07 Jan 2012, PHP 5.4.0 RC5
- Core:
  . Fixed bug #60613 (Segmentation fault with $cls->{expr}() syntax). (Dmitry)
  . Fixed bug #60611 (Segmentation fault with Cls::{expr}() syntax). (Laruence)
  . Fixed bug #55871 (Interruption in substr_replace()). (Stas)
  . Fixed bug #60627 (httpd.worker segfault on startup with php_value).
    (Laruence)

- SAPI:
  . Fixed bug #55500 (Corrupted $_FILES indices lead to security concern).
    (Stas)
  . Fixed bug #54374 (Insufficient validating of upload name leading to 
    corrupted $_FILES indices). (Stas, lekensteyn at gmail dot com)

- CLI SAPI:
  . Fixed bug #60591 (Memory leak when access a non-exists file). (Laruence)

- Intl:
  . Fixed build on Fedora 15 / Ubuntu 11. (Hannes)

- PHP-FPM SAPI:
  . Fixed bug #60629 (memory corruption when web server closed the fcgi fd).
    (fat)
  . Fixed bug #60659 (FPM does not clear auth_user on request accept).
    (bonbons at linux-vserver dot org)

- Improved Session extension:
  . Fixed bug #60640 (invalid return values). (Arpad)
  . Implement FR #60551 (session_set_save_handler should support a core's
    session handler interface). (Arpad)

22 Dec 2011, PHP 5.4.0 RC4
- Core:
  . Added max_input_vars directive to prevent attacks based on hash collisions
    (Dmitry).
  . Fixed bug #60536 (Traits Segfault). (Laruence)
  . Fixed bug #60362 (non-existent sub-sub keys should not have values).
    (Laruence, alan_k, Stas)
  . Fixed bug #60558 (Invalid read and writes). (Laruence)

- CLI SAPI:
  . Fixed bug #60477 (Segfault after two multipart/form-data POST requests,